crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP032.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 20
  fix:
    edits:
      - location:
          row: 5
          column: 0
        end_location:
          row: 5
          column: 20
        content: "f\"{a} {b}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 22
  fix:
    edits:
      - location:
          row: 7
          column: 0
        end_location:
          row: 7
          column: 22
        content: "f\"{b} {a}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 19
  fix:
    edits:
      - location:
          row: 9
          column: 0
        end_location:
          row: 9
          column: 19
        content: "f\"{z.y}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 24
  fix:
    edits:
      - location:
          row: 11
          column: 0
        end_location:
          row: 11
          column: 24
        content: "f\"{a.x} {b.y}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 24
  fix:
    edits:
      - location:
          row: 13
          column: 0
        end_location:
          row: 13
          column: 24
        content: "f\"{a.b} {c.d}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 15
    column: 0
  end_location:
    row: 15
    column: 16
  fix:
    edits:
      - location:
          row: 15
          column: 0
        end_location:
          row: 15
          column: 16
        content: "f\"{a()}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 18
  fix:
    edits:
      - location:
          row: 17
          column: 0
        end_location:
          row: 17
          column: 18
        content: "f\"{a.b()}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 19
    column: 0
  end_location:
    row: 19
    column: 22
  fix:
    edits:
      - location:
          row: 19
          column: 0
        end_location:
          row: 19
          column: 22
        content: "f\"{a.b().c()}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 24
  fix:
    edits:
      - location:
          row: 21
          column: 0
        end_location:
          row: 21
          column: 24
        content: "f\"hello {name}!\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 27
  fix:
    edits:
      - location:
          row: 23
          column: 0
        end_location:
          row: 23
          column: 27
        content: "f\"{a}{b}{c}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 25
    column: 0
  end_location:
    row: 25
    column: 16
  fix:
    edits:
      - location:
          row: 25
          column: 0
        end_location:
          row: 25
          column: 16
        content: "f\"{0x0}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 27
    column: 0
  end_location:
    row: 27
    column: 20
  fix:
    edits:
      - location:
          row: 27
          column: 0
        end_location:
          row: 27
          column: 20
        content: "f\"{a} {b}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 29
    column: 0
  end_location:
    row: 29
    column: 24
  fix:
    edits:
      - location:
          row: 29
          column: 0
        end_location:
          row: 29
          column: 24
        content: "f\"\"\"{a} {b}\"\"\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 31
    column: 0
  end_location:
    row: 31
    column: 17
  fix:
    edits:
      - location:
          row: 31
          column: 0
        end_location:
          row: 31
          column: 17
        content: "f\"foo{1}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 33
    column: 0
  end_location:
    row: 33
    column: 18
  fix:
    edits:
      - location:
          row: 33
          column: 0
        end_location:
          row: 33
          column: 18
        content: "fr\"foo{1}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 35
    column: 4
  end_location:
    row: 35
    column: 21
  fix:
    edits:
      - location:
          row: 35
          column: 4
        end_location:
          row: 35
          column: 21
        content: "f\"{1}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 37
    column: 6
  end_location:
    row: 37
    column: 25
  fix:
    edits:
      - location:
          row: 37
          column: 6
        end_location:
          row: 37
          column: 25
        content: "f\"foo {x} \""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 39
    column: 0
  end_location:
    row: 39
    column: 20
  fix:
    edits:
      - location:
          row: 39
          column: 0
        end_location:
          row: 39
          column: 20
        content: "f\"{a[b]}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 41
    column: 0
  end_location:
    row: 41
    column: 22
  fix:
    edits:
      - location:
          row: 41
          column: 0
        end_location:
          row: 41
          column: 22
        content: "f\"{a.a[b]}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 43
    column: 0
  end_location:
    row: 43
    column: 29
  fix:
    edits:
      - location:
          row: 43
          column: 0
        end_location:
          row: 43
          column: 29
        content: "f\"{escaped}{{}}{y}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 45
    column: 0
  end_location:
    row: 45
    column: 14
  fix:
    edits:
      - location:
          row: 45
          column: 0
        end_location:
          row: 45
          column: 14
        content: "f\"{a}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 47
    column: 0
  end_location:
    row: 47
    column: 24
  fix:
    edits:
      - location:
          row: 47
          column: 0
        end_location:
          row: 47
          column: 24
        content: "f'({a}={{0!e}})'"
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 92
    column: 10
  end_location:
    row: 92
    column: 53
  fix:
    edits:
      - location:
          row: 92
          column: 10
        end_location:
          row: 92
          column: 53
        content: " f\"{osname}-{version}.{release}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 96
    column: 9
  end_location:
    row: 96
    column: 23
  fix:
    edits:
      - location:
          row: 96
          column: 9
        end_location:
          row: 96
          column: 23
        content: " f\"{1}\""
  parent: ~
- kind:
    name: FString
    body: "Use f-string instead of `format` call"
    suggestion: Convert to f-string
    fixable: true
  location:
    row: 99
    column: 6
  end_location:
    row: 99
    column: 20
  fix:
    edits:
      - location:
          row: 99
          column: 6
        end_location:
          row: 99
          column: 20
        content: " f\"{1}\""
  parent: ~

