crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP032_1.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP032_1.py:1:1: UP032 [*] Use f-string instead of `format` call
  |
1 | "{} {}".format(a, b)  # Intentionally at start-of-file, to ensure graceful handling.
  | ^^^^^^^^^^^^^^^^^^^^ UP032
  |
  = help: Convert to f-string

ℹ Suggested fix
1   |-"{} {}".format(a, b)  # Intentionally at start-of-file, to ensure graceful handling.
  1 |+f"{a} {b}"  # Intentionally at start-of-file, to ensure graceful handling.


