crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP033.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: FunctoolsCache
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    commit: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 5
    column: 20
  end_location:
    row: 5
    column: 34
  fix:
    content: functools.cache
    location:
      row: 5
      column: 1
    end_location:
      row: 5
      column: 34
  parent: ~
- kind:
    name: FunctoolsCache
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    commit: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 10
    column: 10
  end_location:
    row: 10
    column: 24
  fix: ~
  parent: ~
- kind:
    name: FunctoolsCache
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    commit: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 16
    column: 20
  end_location:
    row: 16
    column: 34
  fix:
    content: functools.cache
    location:
      row: 16
      column: 1
    end_location:
      row: 16
      column: 34
  parent: ~
- kind:
    name: FunctoolsCache
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    commit: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 21
    column: 20
  end_location:
    row: 21
    column: 34
  fix:
    content: functools.cache
    location:
      row: 21
      column: 1
    end_location:
      row: 21
      column: 34
  parent: ~

