crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP033_0.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: LRUCacheWithMaxsizeNone
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    suggestion: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 4
    column: 20
  end_location:
    row: 4
    column: 34
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 16
        content: import functools
      - location:
          row: 4
          column: 1
        end_location:
          row: 4
          column: 34
        content: functools.cache
  parent: ~
- kind:
    name: LRUCacheWithMaxsizeNone
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    suggestion: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 10
    column: 20
  end_location:
    row: 10
    column: 34
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 16
        content: import functools
      - location:
          row: 10
          column: 1
        end_location:
          row: 10
          column: 34
        content: functools.cache
  parent: ~
- kind:
    name: LRUCacheWithMaxsizeNone
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    suggestion: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 15
    column: 20
  end_location:
    row: 15
    column: 34
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 16
        content: import functools
      - location:
          row: 15
          column: 1
        end_location:
          row: 15
          column: 34
        content: functools.cache
  parent: ~

