crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP033_1.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: LRUCacheWithMaxsizeNone
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    suggestion: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 4
    column: 10
  end_location:
    row: 4
    column: 24
  fix:
    edits:
      - content: "from functools import lru_cache, cache"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 31
      - content: cache
        location:
          row: 4
          column: 1
        end_location:
          row: 4
          column: 24
  parent: ~
- kind:
    name: LRUCacheWithMaxsizeNone
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    suggestion: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 10
    column: 10
  end_location:
    row: 10
    column: 24
  fix:
    edits:
      - content: "from functools import lru_cache, cache"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 31
      - content: cache
        location:
          row: 10
          column: 1
        end_location:
          row: 10
          column: 24
  parent: ~
- kind:
    name: LRUCacheWithMaxsizeNone
    body: "Use `@functools.cache` instead of `@functools.lru_cache(maxsize=None)`"
    suggestion: "Rewrite with `@functools.cache"
    fixable: true
  location:
    row: 15
    column: 10
  end_location:
    row: 15
    column: 24
  fix:
    edits:
      - content: "from functools import lru_cache, cache"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 31
      - content: cache
        location:
          row: 15
          column: 1
        end_location:
          row: 15
          column: 24
  parent: ~

