crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP034.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 2
    column: 6
  end_location:
    row: 2
    column: 13
  fix:
    content: "\"foo\""
    location:
      row: 2
      column: 6
    end_location:
      row: 2
      column: 13
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 5
    column: 6
  end_location:
    row: 5
    column: 26
  fix:
    content: "\"hell((goodybe))o\""
    location:
      row: 5
      column: 6
    end_location:
      row: 5
      column: 26
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 15
  fix:
    content: "(\"foo\")"
    location:
      row: 8
      column: 6
    end_location:
      row: 8
      column: 15
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 11
    column: 6
  end_location:
    row: 11
    column: 13
  fix:
    content: ((1))
    location:
      row: 11
      column: 6
    end_location:
      row: 11
      column: 13
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 14
    column: 6
  end_location:
    row: 14
    column: 25
  fix:
    content: "\"foo{}\".format(1)"
    location:
      row: 14
      column: 6
    end_location:
      row: 14
      column: 25
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 18
    column: 4
  end_location:
    row: 18
    column: 23
  fix:
    content: "\"foo{}\".format(1)"
    location:
      row: 18
      column: 4
    end_location:
      row: 18
      column: 23
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 23
    column: 4
  end_location:
    row: 25
    column: 5
  fix:
    content: "\n        \"foo\"\n    "
    location:
      row: 23
      column: 4
    end_location:
      row: 25
      column: 5
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 30
    column: 12
  end_location:
    row: 30
    column: 23
  fix:
    content: (yield 1)
    location:
      row: 30
      column: 12
    end_location:
      row: 30
      column: 23
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 35
    column: 8
  end_location:
    row: 35
    column: 27
  fix:
    content: "\"foo{}\".format(1)"
    location:
      row: 35
      column: 8
    end_location:
      row: 35
      column: 27
  parent: ~
- kind:
    name: ExtraneousParentheses
    body: Avoid extraneous parentheses
    commit: Remove extraneous parentheses
    fixable: true
  location:
    row: 39
    column: 6
  end_location:
    row: 39
    column: 27
  fix:
    content: x for x in range(3)
    location:
      row: 39
      column: 6
    end_location:
      row: 39
      column: 27
  parent: ~

