crates/ruff/src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP035.py.snap
---
source: crates/ruff/src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 31
  fix:
    content: from collections.abc import Mapping
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 31
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 38
  fix:
    content: from collections.abc import Mapping as MAP
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 38
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
        - Sequence
      fixable: true
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 41
  fix:
    content: "from collections.abc import Mapping, Sequence"
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 41
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 40
  fix:
    content: "from collections import Counter\nfrom collections.abc import Mapping"
    location:
      row: 8
      column: 0
    end_location:
      row: 8
      column: 40
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 42
  fix:
    content: "from collections import (Counter)\nfrom collections.abc import Mapping"
    location:
      row: 10
      column: 0
    end_location:
      row: 10
      column: 42
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 12
    column: 0
  end_location:
    row: 13
    column: 33
  fix:
    content: "from collections import (Counter)\nfrom collections.abc import Mapping"
    location:
      row: 12
      column: 0
    end_location:
      row: 13
      column: 33
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 15
    column: 0
  end_location:
    row: 16
    column: 32
  fix:
    content: "from collections import Counter\nfrom collections.abc import Mapping"
    location:
      row: 15
      column: 0
    end_location:
      row: 16
      column: 32
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
        - Sequence
      fixable: true
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 50
  fix:
    content: "from collections import Counter\nfrom collections.abc import Mapping, Sequence"
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 50
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 51
  fix:
    content: "from collections import Counter\nfrom collections.abc import Mapping as mapping"
    location:
      row: 20
      column: 0
    end_location:
      row: 20
      column: 51
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 23
    column: 4
  end_location:
    row: 23
    column: 44
  fix:
    content: "from collections import Counter\n    from collections.abc import Mapping"
    location:
      row: 23
      column: 4
    end_location:
      row: 23
      column: 44
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 28
    column: 4
  end_location:
    row: 28
    column: 44
  fix:
    content: "from collections import Counter\n    from collections.abc import Mapping"
    location:
      row: 28
      column: 4
    end_location:
      row: 28
      column: 44
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 30
    column: 9
  end_location:
    row: 30
    column: 40
  fix:
    content: from collections.abc import Mapping
    location:
      row: 30
      column: 9
    end_location:
      row: 30
      column: 40
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: true
  location:
    row: 33
    column: 0
  end_location:
    row: 33
    column: 40
  fix:
    content: "from collections import Counter\nfrom collections.abc import Mapping"
    location:
      row: 33
      column: 0
    end_location:
      row: 33
      column: 40
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
        - Callable
      fixable: true
  location:
    row: 37
    column: 4
  end_location:
    row: 42
    column: 5
  fix:
    content: "from collections import (\n        Bad,\n        Good,\n    )\n    from collections.abc import Mapping, Callable"
    location:
      row: 37
      column: 4
    end_location:
      row: 42
      column: 5
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Callable
      fixable: true
  location:
    row: 44
    column: 0
  end_location:
    row: 44
    column: 62
  fix:
    content: "from typing import Match, Pattern, List, OrderedDict\nfrom collections.abc import Callable"
    location:
      row: 44
      column: 0
    end_location:
      row: 44
      column: 62
  parent: ~
- kind:
    ImportReplacements:
      module: collections
      members:
        - OrderedDict
      fixable: true
  location:
    row: 44
    column: 0
  end_location:
    row: 44
    column: 62
  fix:
    content: "from typing import Callable, Match, Pattern, List\nfrom collections import OrderedDict"
    location:
      row: 44
      column: 0
    end_location:
      row: 44
      column: 62
  parent: ~
- kind:
    ImportReplacements:
      module: re
      members:
        - Match
        - Pattern
      fixable: true
  location:
    row: 44
    column: 0
  end_location:
    row: 44
    column: 62
  fix:
    content: "from typing import Callable, List, OrderedDict\nfrom re import Match, Pattern"
    location:
      row: 44
      column: 0
    end_location:
      row: 44
      column: 62
  parent: ~
- kind:
    ImportReplacements:
      module: collections.abc
      members:
        - Mapping
      fixable: false
  location:
    row: 46
    column: 9
  end_location:
    row: 47
    column: 21
  fix: ~
  parent: ~

